# generative-ui

./: .gitignore  main.py  pyproject.toml
L2/: L2.ipynb
L2/.ipynb_checkpoints/: L2-checkpoint.ipynb
L2/frontend/: dev-logs.txt
L3/frontend/: dev-logs.txt
L3/frontend/.ipynb_checkpoints/: vite.config-checkpoint.ts
L4/frontend/: dev-logs.txt
L4/frontend/.ipynb_checkpoints/: package-checkpoint.json  server-checkpoint.ts
L4/frontend/src/.ipynb_checkpoints/: main-checkpoint.tsx
L5/backend/.ipynb_checkpoints/: main-checkpoint.py  server-checkpoint.py
L5/frontend/: dev-logs.txt
L6/frontend/: dev-logs.txt
basic_agent_ui/backend/: app.py  app_adk.py
basic_agent_ui/frontend/: package-lock.json  package.json  server.ts
basic_agent_ui/frontend/src/: App.tsx
controlled_gen_ui/backend/: app_adk.py
controlled_gen_ui/frontend/: package-lock.json  package.json  server.ts  tsconfig.json  watch-server.ts
controlled_gen_ui/frontend/.ipynb_checkpoints/: package-checkpoint.json
controlled_gen_ui/frontend/src/: App.tsx  main.tsx
lecture/L2/: L_2.ipynb
lecture/L5/: requirements.txt
lecture/L6/: scenes.txt
lecture/L8/: helper.py
