[project]
name = "generative-ui-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ag-ui-adk>=0.6.1",
    "copilotkit>=0.1.88",
    "fastapi>=0.136.1",
    "google-adk>=1.32.0",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "litellm>=1.83.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
